--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/btoa": "^1.2.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mock-req-res": "^1.1.2",
     "@types/node-fetch": "^2.5.7",
     "@types/passport-jwt": "^3.0.3",
     "axios": "^0.19.2",
@@ -43,6 +44,7 @@
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "jsonwebtoken": "^8.5.1",
+    "mock-req-res": "^1.2.0",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
