--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
+    "discord.js": "12.3.1",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
