--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mock-req-res": "^1.1.2",
     "@types/node-fetch": "^2.5.7",
+    "@types/node-schedule": "^1.3.1",
     "@types/passport-jwt": "^3.0.3",
     "axios": "^0.19.2",
     "btoa": "^1.2.1",
@@ -46,6 +47,7 @@
     "discord.js": "12.3.1",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
+    "node-schedule": "^1.3.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.3.0",
