--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node-fetch": "^2.5.7",
     "@types/node-schedule": "^1.3.1",
     "@types/passport-jwt": "^3.0.3",
+    "@types/ramda": "0.27.32",
     "axios": "^0.19.2",
     "btoa": "^1.2.1",
     "class-transformer": "^0.3.1",
@@ -72,6 +73,7 @@
     "eslint-plugin-import": "^2.20.1",
     "jest": "26.0.1",
     "prettier": "^1.19.1",
+    "ramda": "^0.27.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.1.0",
     "ts-loader": "^6.2.1",
