--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "typeorm": "^0.2.25"
+    "typeorm": "^0.2.25",
+    "ytdl-core": "^4.4.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
