--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typeorm:migration:run": "npm run typeorm -- migration:run"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.3.3",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
@@ -46,6 +47,7 @@
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "discord.js": "12.3.1",
+    "ffmpeg-static": "^4.2.7",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
     "node-schedule": "^1.3.2",
@@ -57,7 +59,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "typeorm": "^0.2.25",
-    "ytdl-core": "^4.4.4"
+    "ytdl-core": "^4.4.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
