--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "typeorm:migration:run": "npm run typeorm -- migration:run"
   },
   "dependencies": {
-    "@nestjs/cli": "^7.0.0",
     "@discordjs/opus": "^0.3.3",
+    "@nestjs/cli": "^7.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/jwt": "^7.1.0",
@@ -67,7 +67,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
-    "@types/node": "^13.9.1",
+    "@types/node": "14.14.37",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
     "@typescript-eslint/parser": "3.0.2",
